Update talks and publications

--- a/_posts/2022-06-27-blog-post-1.md
+++ b/_posts/2022-06-27-blog-post-1.md
@@ -3,18 +3,41 @@ title: 'Blog Post number 4'
 date: 2015-08-14
 permalink: /posts/2012/08/blog-post-4/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - lab
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+DMAC Lab mission
 
-Headings are cool
+Lab Mission
 ======
 
-You can have many headings
-======
+Connecting phenotype-genotype. 
+-------------
+The phenotype here include:
+- Medical imaging（Neuroimaging, whole-body imaging, ophthalmic imaging). 
+- laboratory measurements.
+The genotype here includes:
+- DNA (SNPs)
+- RNASeq
+- Protenomics
 
-Aren't headings cool?
+Clinical/biological explainability of AI systems
 ------
+- Medical Image Segmentation
+- Saliency-map/Attention machenisms for disease classification
+- Medical-image to text translation
+
+
+Lab Projects
+======
+Multi-modal information fusion
+------
+- Multi-modal neuroimaging
+- Genotype-phenotype
+- Medical+Clinical notes information fusion
+
+Explainable AI
+--------
+- Salency map for medical imaging
+- Medical image to text translation
+
